--- a/index.html
+++ b/index.html
@@ -2178,7 +2178,11 @@
 <script>
 // ================== ХРАНИЛИЩЕ ДОНАТОВ ==================
 let realDonations = [];
-
+ {
+        name: "Unknown",
+        amount: 100,
+        timestamp: 1733331600000 // 4 декабря 2025
+    },
 // ================== ОСНОВНЫЕ ФУНКЦИИ ==================
 
 // ДОБАВЛЕНИЕ РЕАЛЬНОГО ДОНАТА
