--- a/index.html
+++ b/index.html
@@ -2176,8 +2176,10 @@
 </style>
 
 <script>
-// ================== ХРАНИЛИЩЕ ДОНАТОВ ==================
-let realDonations = [];
+// ================== ХАРДКОД ДОНАТОВ ==================
+let realDonations = [
+    // СЮДА ВПИСЫВАЙ ДОНАТЫ ВРУЧНУЮ
+    // Формат: { name: "ИМЯ", amount: СУММА, message: "ТЕКСТ", timestamp: ВРЕМЯ }
  {
         name: "Unknown",
         amount: 100,
