--- a/index.html
+++ b/index.html
@@ -2111,7 +2111,7 @@
 
     <!-- ТОП ДОНАТЕРОВ -->
     <div id="topDonatorsContainer" style="
-        display: none;
+        display: block;
         margin-bottom: 1.5rem;
         padding: 1rem;
         background: rgba(0,0,0,0.4);
@@ -2143,7 +2143,7 @@
         border-top: 1px solid var(--primary-color);
         border-bottom: 1px solid var(--primary-color);
         height: 60px;
-        display: none;
+        display: block;
     ">
         <div id="donationTicker" style="
             display: flex;
