--- a/index.html
+++ b/index.html
@@ -2453,6 +2453,8 @@ document.addEventListener('DOMContentLoaded', loadProgress);
             ">
                 • Имя в списке благодарностей<br>
                 • Доступ к демо-версиям
+                • Просмотр сайта
+                • Прослушивание музыки
             </div>
         </div>
 
@@ -2508,8 +2510,11 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 border-top: 1px solid rgba(205, 127, 50, 0.3);
                 padding-top: 0.8rem;
             ">
-                • Ранний доступ к трекам<br>
-                • Упоминание в соцсетях
+                • Упоминание в соцсетях<br>
+                • Имя в списке благодарностей
+                • Доступ к демо-версиям
+                • Просмотр сайта
+                • Прослушивание музыки
             </div>
         </div>
 
@@ -2565,8 +2570,12 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 border-top: 1px solid rgba(192, 192, 192, 0.3);
                 padding-top: 0.8rem;
             ">
-                • Персональный shoutout<br>
-                • Возможность выбрать next release
+                • Выбор темы следующего трека<br>
+                • Упоминание в соцсетях
+                • Имя в списке благодарностей
+                • Доступ к демо-версиям
+                • Просмотр сайта
+                • Прослушивание музыки
             </div>
         </div>
 
@@ -2622,8 +2631,13 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 border-top: 1px solid rgba(255, 215, 0, 0.3);
                 padding-top: 0.8rem;
             ">
-                • Предложить тему для трека<br>
-                • Эксклюзивный мерч
+                • Выбор бита<br>
+                • Выбор темы следующего трека
+                • Упоминание в соцсетях
+                • Имя в списке благодарностей
+                • Доступ к демо-версиям
+                • Просмотр сайта
+                • Прослушивание музыки
             </div>
         </div>
 
@@ -2681,6 +2695,14 @@ document.addEventListener('DOMContentLoaded', loadProgress);
             ">
                 • Имя в титрах альбома<br>
                 • VIP доступ на концерты
+                • Выбор бита
+                • Выбор темы следующего трека
+                • Упоминание в соцсетях
+                • Имя в списке благодарностей
+                • Доступ к демо-версиям
+                • Просмотр сайта
+                • Прослушивание музыки
+                
             </div>
         </div>
 
@@ -2740,8 +2762,16 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 padding-top: 0.8rem;
             ">
                 • Право на коллаборацию<br>
-                • Исполнительный продюсер<br>
-                • Lifetime VIP статус
+                • Приписка в prod (как продюсер) 
+                • Имя в титрах альбома
+                • VIP доступ на концерты (в дальнейшем) 
+                • Выбор бита
+                • Выбор темы следующего трека
+                • Упоминание в соцсетях
+                • Имя в списке благодарностей
+                • Доступ к демо-версиям
+                • Просмотр сайта
+                • Прослушивание музыки
             </div>
         </div>
     </div>
