--- a/index.html
+++ b/index.html
@@ -2452,8 +2452,8 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 padding-top: 0.8rem;
             ">
                 • Имя в списке благодарностей<br>
-                • Доступ к демо-версиям
-                • Просмотр сайта
+                • Доступ к демо-версиям<br>
+                • Просмотр сайта<br>
                 • Прослушивание музыки
             </div>
         </div>
@@ -2511,9 +2511,9 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 padding-top: 0.8rem;
             ">
                 • Упоминание в соцсетях<br>
-                • Имя в списке благодарностей
-                • Доступ к демо-версиям
-                • Просмотр сайта
+                • Имя в списке благодарностей<br>
+                • Доступ к демо-версиям<br>
+                • Просмотр сайта<br>
                 • Прослушивание музыки
             </div>
         </div>
@@ -2571,10 +2571,10 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 padding-top: 0.8rem;
             ">
                 • Выбор темы следующего трека<br>
-                • Упоминание в соцсетях
-                • Имя в списке благодарностей
-                • Доступ к демо-версиям
-                • Просмотр сайта
+                • Упоминание в соцсетях<br>
+                • Имя в списке благодарностей<br>
+                • Доступ к демо-версиям<br>
+                • Просмотр сайта<br>
                 • Прослушивание музыки
             </div>
         </div>
@@ -2632,11 +2632,11 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 padding-top: 0.8rem;
             ">
                 • Выбор бита<br>
-                • Выбор темы следующего трека
-                • Упоминание в соцсетях
-                • Имя в списке благодарностей
-                • Доступ к демо-версиям
-                • Просмотр сайта
+                • Выбор темы следующего трека<br>
+                • Упоминание в соцсетях<br>
+                • Имя в списке благодарностей<br>
+                • Доступ к демо-версиям<br>
+                • Просмотр сайта<br>
                 • Прослушивание музыки
             </div>
         </div>
@@ -2694,13 +2694,13 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 padding-top: 0.8rem;
             ">
                 • Имя в титрах альбома<br>
-                • VIP доступ на концерты
-                • Выбор бита
-                • Выбор темы следующего трека
-                • Упоминание в соцсетях
-                • Имя в списке благодарностей
-                • Доступ к демо-версиям
-                • Просмотр сайта
+                • VIP доступ на концерты<br>
+                • Выбор бита<br>
+                • Выбор темы следующего трека<br>
+                • Упоминание в соцсетях<br>
+                • Имя в списке благодарностей<br>
+                • Доступ к демо-версиям<br>
+                • Просмотр сайта<br>
                 • Прослушивание музыки
                 
             </div>
@@ -2762,15 +2762,15 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 padding-top: 0.8rem;
             ">
                 • Право на коллаборацию<br>
-                • Приписка в prod (как продюсер) 
-                • Имя в титрах альбома
-                • VIP доступ на концерты (в дальнейшем) 
-                • Выбор бита
-                • Выбор темы следующего трека
-                • Упоминание в соцсетях
-                • Имя в списке благодарностей
-                • Доступ к демо-версиям
-                • Просмотр сайта
+                • Приписка в prod (как продюсер)<br> 
+                • Имя в титрах альбома<br>
+                • VIP доступ на концерты (в дальнейшем)<br>
+                • Выбор бита<br>
+                • Выбор темы следующего трека<br>
+                • Упоминание в соцсетях<br>
+                • Имя в списке благодарностей<br>
+                • Доступ к демо-версиям<br>
+                • Просмотр сайта<br>
                 • Прослушивание музыки
             </div>
         </div>
