--- a/index.html
+++ b/index.html
@@ -2694,7 +2694,7 @@ document.addEventListener('DOMContentLoaded', loadProgress);
                 padding-top: 0.8rem;
             ">
                 • Имя в титрах альбома<br>
-                • VIP доступ на концерты<br>
+                • VIP доступ на концерты(в дальнейшем)<br>
                 • Выбор бита<br>
                 • Выбор темы следующего трека<br>
                 • Упоминание в соцсетях<br>
