--- a/index.html
+++ b/index.html
@@ -3326,7 +3326,7 @@ window.addRealDonation = addRealDonation;
                 font-weight: bold;
                 margin-bottom: 0.3rem;
             ">
-                ПЛАТИНА
+                АЛМАЗ
             </div>
             <div style="
                 color: #e5e4e2;
